--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.shgbit.bailiff.MainActivity">
+    tools:context="com.shgbit.bailiff.mvp.MainActivity">
 
     <com.shgbit.bailiff.widget.TopViewLayout
         android:id="@+id/top_view"
@@ -15,6 +15,8 @@
         app:topview_title="sss" />
 
     <TextView
+        android:id="@+id/test"
+        android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
