--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.shgbit.bailiff.mvp.MainActivity">
+    tools:context="com.shgbit.bailiff.mvp.BailiffActivity">
 
     <com.shgbit.bailiff.widget.TopViewLayout
         android:id="@+id/top_view"
